Bugfix: .truncate-featured.top was going the wrong direction

--- a/src/assets/style/_helpers.scss
+++ b/src/assets/style/_helpers.scss
@@ -103,7 +103,7 @@
 }
 
 .truncate-featured.top {
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, $co_purple 100%);
+  background: linear-gradient(to top, rgba(255,255,255,0) 0%, $co_purple 100%);
   top: 0;
   bottom: initial;
 }
